@@ -112,6 +112,7 @@
 * CyberSource: Add the auth service aggregator_id field [yunnydang] #5026
 * Cecabank: exclude 3ds empty parameter [jherreraa] #5021
 * Moneris: Add the customer id field [yunnydang] #5028
+* Kushki: Add the product_details field [yunnydang] #5027
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
